# extensible-cli-with-python

./: CONTRIBUTING.md  README.md  pyproject.toml
cli_project/: hello.py  kbk.py
features/: hello.feature
features/steps/: hello_step_defs.py
server/: app.py
tests/: test_cli_project.py  test_shell.py
