[tool.poetry]
name = "cli_project"
version = "0.0.9"
description = ""
authors = ["Dimitri Denisjonok <dimitri.781@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
behave = "^1.2"

[tool.poetry.scripts]
kbk = 'cli_project.kbk:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
